--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,8 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+version.com.github.jillesvangurp..kotlin4example=1.1.2
+
 version.junit.jupiter=5.10.2
 ##        # available=5.10.2
 
