--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=0.0.0.1-SNAPSHOT
-group=com.github.jillesvangurp
+group=com.jillesvangurp
 kotlin.mpp.stability.nowarn=true
 org.gradle.configuration-cache=true
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m -Xmx2g -Dkotlin.daemon.jvm.options=-Xmx2g
