--- a/versions.properties
+++ b/versions.properties
@@ -9,17 +9,13 @@
 
 version.com.github.jillesvangurp..kotlin4example=1.1.5
 
-version.junit.jupiter=5.10.2
+version.junit.jupiter=5.10.3
 ##        # available=5.11.0-M1
+##        # available=5.11.0-M2
 
-version.kotest=5.9.0
+version.kotest=5.9.1
 
-version.kotlin=1.9.24
-## # available=2.0.0-Beta1
-## # available=2.0.0-Beta2
-## # available=2.0.0-Beta3
-## # available=2.0.0-Beta4
-## # available=2.0.0-Beta5
-## # available=2.0.0-RC1
-## # available=2.0.0-RC2
-## # available=2.0.0-RC3
+version.kotlin=2.0.0
+## # available=2.0.10-RC
+## # available=2.0.20-Beta1
+## # available=2.0.20-Beta2
