--- a/versions.properties
+++ b/versions.properties
@@ -7,15 +7,13 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
-version.com.github.jillesvangurp..kotlin4example=1.1.5
+version.com.github.jillesvangurp..kotlin4example=1.1.6
 
-version.junit.jupiter=5.10.3
-##        # available=5.11.0-M1
-##        # available=5.11.0-M2
+version.junit.jupiter=5.11.3
 
 version.kotest=5.9.1
+## # available=6.0.0.M1
 
-version.kotlin=2.0.0
-## # available=2.0.10-RC
-## # available=2.0.20-Beta1
-## # available=2.0.20-Beta2
+version.kotlin=2.0.21
+## # available=2.1.0-Beta1
+## # available=2.1.0-Beta2
